--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -37,6 +37,7 @@
         android:targetSdkVersion="33"/>
 
     <application
+        android:allowBackup="true"
         android:label="@string/device_settings_app_name"
         android:persistent="true"
         android:defaultToDeviceProtectedStorage="true"
@@ -51,6 +52,35 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
+
+        <!--activity
+            android:name=".dirac.DiracActivity"
+            android:label="@string/dirac_title"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
+            </intent-filter>
+            <meta-data 
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.sound" />
+            <meta-data
+                android:name="com.android.settings.summary"
+                android:resource="@string/dirac_summary" />
+        </activity-->
+
+        <activity
+            android:name=".dolby.DolbyActivity"
+            android:label="@string/dolby_title"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
+                <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES"/>
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                       android:value="com.android.settings.category.ia.sound" />
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/dolby_summary" />
+        </activity>
 
         <service
             android:name=".doze.DozeService"
@@ -137,6 +167,28 @@
             android:name=".thermal.ThermalService"
             android:exported="true"
             android:permission="ThermalService">
+        </service>
+
+        <!--service
+            android:name=".dirac.DiracTileService"
+            android:icon="@drawable/ic_qs_dirac"
+            android:label="@string/dirac_title"
+            android:exported="true"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
+        </service-->
+
+        <service
+            android:name=".dolby.DolbyTileService"
+            android:icon="@drawable/ic_dolby_qs"
+            android:label="@string/dolby_title"
+            android:exported="true"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
         </service>
 
     </application>
