--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -511,5 +511,6 @@ subsystem mem_buf_vm
 # devcoredump data attributes
 /sys/class/devcoredump/devcd*                           data                            0600    system  system
 
-# Battery
-/sys/class/qcom-battery                                 input_suspend                   0660    system  system
+# Fingerprint
+/dev/goodix_fp                                                         0666   system     system
+/sys/bus/platform/devices/soc:xiaomi_fingerprint/fingerdown            0664   system     graphics
