marble: overlay: Add FPS info support
Change-Id: 942a50734708e57d1f91fe0e80d5e48ccc2e8254
Signed-off-by: frozenking <frozenking1240196@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -420,6 +420,10 @@ on property:sys.boot_completed=1
     chown media audio /sys/kernel/aud_dev/state
     write /sys/devices/virtual/cvp/cvp/boot 1
 
+    # FPS info
+    chown system graphics /sys/class/drm/card0/sde-crtc-0/measured_fps
+    chmod 0666 /sys/class/drm/card0/sde-crtc-0/measured_fps
+
 on property:persist.vendor.radio.atfwd.start=false
     stop vendor.atfwd
 
