--- a/rro_overlays/SettingsProviderOverlayChina/AndroidManifest.xml
+++ b/rro_overlays/SettingsProviderOverlayChina/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.settingsprovider.overlay.marble.china">
-    <application android:hasCode="false" />
+    <application android:hasCode="false" android:allowBackup="false"/>
     <overlay android:targetPackage="com.android.providers.settings"
              android:requiredSystemPropertyName="ro.boot.hwc"
              android:requiredSystemPropertyValue="CN"
