--- a/rro_overlays/TelecommResCommon/AndroidManifest.xml
+++ b/rro_overlays/TelecommResCommon/AndroidManifest.xml
@@ -4,7 +4,8 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
      package="com.android.server.telecom.overlay.common">
+     <application android:allowBackup="false"/>
      <overlay android:targetPackage="com.android.server.telecom"
           android:isStatic="true"
-          android:priority="1000" />
+          android:priority="550" />
 </manifest>
