--- a/rro_overlays/TelephonyResCommon/AndroidManifest.xml
+++ b/rro_overlays/TelephonyResCommon/AndroidManifest.xml
@@ -4,6 +4,8 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
      package="com.android.phone.overlay.common">
+     <application android:allowBackup="false"/>
      <overlay android:targetPackage="com.android.phone"
-          android:isStatic="true" />
+          android:isStatic="true"
+          android:priority="550" />
 </manifest>
