--- a/rro_overlays/WifiResCommon/AndroidManifest.xml
+++ b/rro_overlays/WifiResCommon/AndroidManifest.xml
@@ -4,8 +4,9 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
      package="com.android.wifi.resources.overlay.common">
+     <application android:allowBackup="false"/>
      <overlay android:targetPackage="com.android.wifi.resources"
           android:targetName="WifiCustomization"
           android:isStatic="true"
-          android:priority="1000" />
+          android:priority="550" />
 </manifest>
