--- a/rro_overlays/CarrierConfigResMarble/AndroidManifest.xml
+++ b/rro_overlays/CarrierConfigResMarble/AndroidManifest.xml
@@ -4,9 +4,8 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-     package="com.android.carrierconfig.overlay.common">
-     <application android:allowBackup="false"/>
+     package="com.android.carrierconfig.overlay.marble">
      <overlay android:targetPackage="com.android.carrierconfig"
           android:isStatic="true"
-          android:priority="550" />
+          android:priority="1000" />
 </manifest>
