--- a/rro_overlays/WifiResMarble/AndroidManifest.xml
+++ b/rro_overlays/WifiResMarble/AndroidManifest.xml
@@ -1,12 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2023 The LineageOS Project
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-     package="com.android.wifi.resources.xiaomi">
+<<<<<<<< HEAD:rro_overlays/WifiResCommon/AndroidManifest.xml
+     package="com.android.wifi.resources.overlay.common">
      <application android:allowBackup="false"/>
+========
+     package="com.android.wifi.resources.overlay.marble">
+>>>>>>>> 655941d (marble: rro_overlay: Re-make overlays from V14.0.23.0.TMRCNXM):rro_overlays/WifiResMarble/AndroidManifest.xml
      <overlay android:targetPackage="com.android.wifi.resources"
           android:targetName="WifiCustomization"
           android:isStatic="true"
-          android:priority="1024" />
+          android:priority="550" />
 </manifest>
