--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -1,30 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2015-2016 The CyanogenMod Project
-                   2017-2023 The LineageOS Project
+                   2017-2021 The LineageOS Project
+     Copyright (C) 2023 Paranoid Android
 
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-
-          http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
+     SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="org.pixelexperience.settings"
+    package="org.lineageos.settings"
     android:versionCode="1"
     android:versionName="1.0"
     android:sharedUserId="android.uid.system">
 
-    <uses-permission android:name="android.permission.ACCESS_SURFACE_FLINGER" />
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.CAMERA_OPEN_CLOSE_LISTENER" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -32,46 +22,56 @@
 
     <protected-broadcast android:name="com.android.systemui.doze.pulse" />
 
-    <uses-sdk
-        android:minSdkVersion="30"
-        android:targetSdkVersion="33"/>
-
     <application
-        android:allowBackup="true"
-        android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/device_settings_app_name"
         android:persistent="true"
+        android:theme="@style/Theme.SubSettingsBase"
         android:defaultToDeviceProtectedStorage="true"
-        android:directBootAware="true"
-        android:theme="@style/Theme.SubSettingsBase">
+        android:directBootAware="true">
 
-        <receiver
-            android:name=".BootCompletedReceiver"
-            android:exported="true">
+        <receiver android:name=".BootCompletedReceiver" android:exported="true">
             <intent-filter android:priority="1000">
                 <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
 
-        <!--activity
-            android:name=".dirac.DiracActivity"
-            android:label="@string/dirac_title"
-            android:exported="true">
+        <service
+            android:name=".thermal.ThermalService"
+            android:exported="true"
+            android:permission="ThermalService">
+        </service>
+
+        <activity
+            android:name=".thermal.ThermalActivity"
+            android:label="@string/thermal_title"
+            android:exported="true"
+            android:theme="@style/Theme.SubSettingsBase_v31">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
             </intent-filter>
-            <meta-data 
+            <meta-data
                 android:name="com.android.settings.category"
-                android:value="com.android.settings.category.ia.sound" />
+                android:value="com.android.settings.category.ia.battery" />
             <meta-data
                 android:name="com.android.settings.summary"
-                android:resource="@string/dirac_summary" />
-        </activity-->
+                android:resource="@string/thermal_summary" />
+            <meta-data
+                android:name="com.android.settings.order"
+                android:value="1" />
+        </activity>
+
+        <provider
+            android:name=".SummaryProvider"
+            android:authorities="org.lineageos.settings.device.summary">
+        </provider>
 
         <activity
             android:name=".dolby.DolbyActivity"
+            android:exported="true"
             android:label="@string/dolby_title"
-            android:exported="true">
+            android:theme="@style/Theme.SubSettingsBase">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
                 <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES"/>
@@ -87,10 +87,16 @@
                        android:value="content://org.lineageos.settings.device.summary/dolby" />
         </activity>
 
-        <provider
-            android:name=".SummaryProvider"
-            android:authorities="org.lineageos.settings.device.summary">
-        </provider>
+        <service
+            android:name=".dolby.DolbyTileService"
+            android:exported="true"
+            android:icon="@drawable/ic_dolby_qs"
+            android:label="@string/dolby_title"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
+        </service>
 
         <service
             android:name=".doze.DozeService"
@@ -123,10 +129,23 @@
                 android:resource="@string/clear_speaker_summary" />
         </activity>
 
+        <service
+            android:name=".display.ColorService"
+            android:exported="true"
+            android:permission="ColorService">
+        </service>
+
+        <service
+            android:name=".camera.NfcCameraService"
+            android:exported="true"
+            android:permission="NfcCameraService">
+        </service>
+
         <activity
             android:name=".refreshrate.RefreshActivity"
             android:label="@string/refresh_title"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.SubSettingsBase_v31">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
             </intent-filter>
@@ -145,70 +164,15 @@
         </service>
 
         <service
-            android:name=".refreshrate.RefreshTileService"
-            android:icon="@drawable/ic_qs_refresh_rate"
-            android:label="@string/refresh_title"
-            android:exported="true"
-            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
-            <intent-filter>
-                <action android:name="android.service.quicksettings.action.QS_TILE"/>
-            </intent-filter>
-        </service>
-
-        <activity
-            android:name=".thermal.ThermalActivity"
-            android:label="@string/thermal_title"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.android.settings.action.IA_SETTINGS" />
-            </intent-filter>
-            <meta-data
-                android:name="com.android.settings.category"
-                android:value="com.android.settings.category.ia.battery" />
-            <meta-data
-                android:name="com.android.settings.summary"
-                android:resource="@string/thermal_summary" />
-            <meta-data
-                android:name="com.android.settings.order"
-                android:value="1" />
-        </activity>
-
-        <service
-            android:name=".thermal.ThermalService"
-            android:exported="true"
-            android:permission="ThermalService">
-        </service>
-
-        <!--service
-            android:name=".dirac.DiracTileService"
-            android:icon="@drawable/ic_qs_dirac"
-            android:label="@string/dirac_title"
-            android:exported="true"
-            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
-            <intent-filter>
-                <action android:name="android.service.quicksettings.action.QS_TILE"/>
-            </intent-filter>
-        </service-->
-
-        <service
-            android:name=".dolby.DolbyTileService"
-            android:icon="@drawable/ic_dolby_qs"
-            android:label="@string/dolby_title"
-            android:exported="true"
-            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
-            <intent-filter>
-                <action android:name="android.service.quicksettings.action.QS_TILE"/>
-            </intent-filter>
-        </service>
-
-        <service
             android:name=".doze.PocketService"
+            android:exported="true"
             android:permission="PocketService">
         </service>
-        
+
         <service
-            android:name=".camera.NfcCameraService"
-            android:permission="NfcCameraService">
+            android:name=".doze.AodBrightnessService"
+            android:exported="true"
+            android:permission="AodBrightnessService">
         </service>
 
     </application>
