--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -55,7 +55,7 @@ subsystem mem_buf_vm
 /dev/ion                  0664   system     system
 /dev/membuf               0664   system     system
 /dev/mem_buf_vm/*         0444   system     system
-/dev/dma_heap/qcom,*      0444   system     system
+/dev/dma_heap/qcom,*      0664   system     system
 /dev/rtc0                 0660   system     system
 /dev/smd0                 0660   system     system
 /dev/smd4                 0660   system     system
@@ -211,7 +211,6 @@ subsystem mem_buf_vm
 /dev/msm_vidc_dec_sec     0660   system     audio
 /dev/msm_vidc_enc         0660   system     audio
 /dev/msm_rotator          0660   system     system
-/dev/hw_random            0600   root       root
 /dev/sdsprpc-smd          0660   system     system
 
 #permissions for audio
@@ -248,6 +247,7 @@ subsystem mem_buf_vm
 /dev/aud_pasthru_adsp     0660   system     audio
 /dev/msm_audio_ion_cma    0660   system     audio
 /dev/msm_audio_ion        0660   system     audio
+/dev/aud_pasthru_modem    0660   system     audio
 /dev/ttyHSL1              0660   system     system
 /dev/ttyHS1               0660   system     system
 /dev/mdm                  0660   system     radio
@@ -443,7 +443,6 @@ subsystem mem_buf_vm
 /sys/class/graphics/fb0     modes                    0664    system  graphics
 /sys/class/graphics/fb0     mode                     0664    system  graphics
 /sys/class/graphics/fb0     msm_cmd_autorefresh_en   0664    system  graphics
-*/
 
 /sys/devices/platform/soc/ae00000.qcom,mdss_mdp power/control 0664 system graphics
 
@@ -528,4 +527,4 @@ subsystem mem_buf_vm
 /sys/bus/platform/devices/soc:xiaomi_fingerprint/fingerdown     0664   system  graphics
 
 # Battery
-/sys/class/qcom-battery                                 input_suspend                   0660    system  system
+/sys/class/qcom-battery         input_suspend                   0660    system  system
